# trie

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  trie.cabal
src/Data/: Trie.hs
