name:                trie
version:             0.1.0.0
synopsis:            Trie implementation
description:         A simple Trie implementation
homepage:            https://github.com/dmjio/trie
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2019
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Trie
  other-extensions:    TupleSections, RecordWildCards, OverloadedStrings, ViewPatterns
  build-depends:       base < 5, containers
  hs-source-dirs:      src
  default-language:    Haskell2010


source-repository head
   type: git
   location: https://github.com/dmjio/trie.git
